--- a/BlazorTool.Client/Layout/MainLayout.razor.css
+++ b/BlazorTool.Client/Layout/MainLayout.razor.css
@@ -15,10 +15,10 @@ main {
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: space-between;
+    justify-content: flex-end;
+    height: 3.5rem;
     display: flex;
     align-items: center;
-    height: 3.5rem;
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
@@ -27,20 +27,14 @@ main {
         text-decoration: none;
     }
 
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
+        .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
+            text-decoration: underline;
+        }
 
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-.api-address-display {
-    font-size: 0.8rem;
-    color: #888;
-    margin-right: auto; /* Pushes it to the left */
-}
+        .top-row ::deep a:first-child {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
 @media (max-width: 640.98px) {
     .top-row {
@@ -70,15 +64,33 @@ main {
         z-index: 1;
     }
 
-    .top-row.auth {
-        justify-content: space-between;
-    }
+        .top-row.auth ::deep a:first-child {
+            flex: 1;
+            text-align: right;
+            width: 0;
+        }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 1.5rem;
-    }
-
-    main {
-        padding-top: 2rem;
+    .top-row, article {
+        padding-left: 2rem !important;
+        padding-right: 1.5rem !important;
     }
 }
+
+#blazor-error-ui {
+    background: lightyellow;
+    bottom: 0;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    display: none;
+    left: 0;
+    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
