--- a/BlazorTool.Client/Layout/NavMenu.razor.css
+++ b/BlazorTool.Client/Layout/NavMenu.razor.css
@@ -1,4 +1,4 @@
-.navbar-toggler {
+﻿.navbar-toggler {
     appearance: none;
     cursor: pointer;
     width: 3.5rem;
@@ -115,4 +115,18 @@
 .nav-scrollable {
     max-height: 100vh;
     overflow-y: auto;
+    position: relative;
+    padding-bottom: 35px;
+}
+
+.api-info-footer {
+    position: absolute; /* Вырываем элемент из общего потока */
+    bottom: 0; /* Прижимаем к низу родительского блока */
+    left: 0; /* Выравниваем по левому краю */
+    width: 100%; /* Растягиваем на всю ширину родителя */
+    /* Стилизация */
+    font-size: 0.85em; /* Уменьшаем шрифт */
+    color: #6c757d; /* Цвет как у класса .text-secondary */
+    padding: 0 1rem 0.5rem 1rem; /* Внутренние отступы, чтобы текст совпадал с меню */
+    box-sizing: border-box; /* Чтобы padding не увеличивал общую ширину */
 }
