add some logging for controllers refactoring check authentication add component CheckSession

--- a/BlazorTool.Client/Layout/MainLayout.razor
+++ b/BlazorTool.Client/Layout/MainLayout.razor
@@ -1,10 +1,12 @@
-﻿@using BlazorTool.Client.Services
+﻿@using BlazorTool.Client.Components
+@using BlazorTool.Client.Services
 @inherits LayoutComponentBase
 @inject UserState UserState
 @inject AppStateService AppState
 @inject NavigationManager Navigation
 @inject ApiServiceClient ApiClient
 @inject IHttpClientFactory HttpClientFactory
+@inject ILogger<MainLayout> Logger
 
 <TelerikRootComponent>
 
@@ -17,6 +19,7 @@
     }
     else
     {
+        <CheckSession apiService="@ApiClient" UserState="@UserState" />
         <div class="page">
             <div class="sidebar">
                 <NavMenu />
@@ -42,6 +45,8 @@
 </TelerikRootComponent>
     @code{
 
+
+
     private string buildDate = "N/A";
 
     private string formattedVersion = "Version";
@@ -63,16 +68,17 @@
         {
             // buildDate = "N/A";
         }
-        
+
         await UserState.InitializationTask;
 
         // If user state is not authenticated locally, redirect to login
-        if (!UserState.IsAuthenticated)
-        {
-            Navigation.NavigateTo("/login");
-            return;
-        }
+        // if (!UserState.IsAuthenticated)
+        // {
+        //     Navigation.NavigateTo("/login");
+        //     return;
+        // }
 
+        Logger.LogInformation($"User [{UserState.UserName}] is authenticated from userState");
         // If on a page other than login, verify session with the server
         if (!Navigation.Uri.EndsWith("/login", StringComparison.OrdinalIgnoreCase))
         {
@@ -82,6 +88,7 @@
                 if (!response.IsSuccessStatusCode)
                 {
                     // Server session expired or invalid, clear local state and redirect
+                    Logger.LogWarning($"[{UserState.UserName}] == Session check failed with status code: {response.StatusCode}");
                     await UserState.ClearAsync();
                     Navigation.NavigateTo("/login");
                 }
@@ -89,6 +96,7 @@
             catch (Exception ex)
             {
                 // Handle potential network errors or API unavailability
+                Logger.LogError(ex, "Failed to check session for user {UserName}", UserState.UserName);
                 Console.WriteLine($"Failed to check session: {ex.Message}");
                 await UserState.ClearAsync();
                 Navigation.NavigateTo("/login");
@@ -98,6 +106,7 @@
 
     private async Task Logout()
     {
+        Logger.LogInformation($"<==== [{UserState.UserName}] is logging out");
         await UserState.ClearAsync();
         Navigation.NavigateTo("/login");
     }
